[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"

[project]
name = "transix"
version = "0.1.0"
description = "A lightweight toolkit for numerical transformations"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Gowtham Mahendran", email = "gowtham.mahendran@outlook.com"}]
keywords = [
  "numerical",
  "transformations",
  "math",
  "engineering",
  "scientific",
  "transforms"
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "Topic :: Scientific/Engineering",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14"
]

dependencies = [
  "numpy>=2.0"
]

[project.urls]
Homepage = "https://github.com/Gowtham-Mahendran/transix"
Documentation = "https://Gowtham-Mahendran.github.io/transix"
Repository = "https://github.com/Gowtham-Mahendran/transix"
Issues = "https://github.com/Gowtham-Mahendran/transix/issues"
Changelog = "https://github.com/Gowtham-Mahendran/transix/blob/master/CHANGELOG.md"

[project.optional-dependencies]
dev = [
  "pytest>=9.0",
  "ruff>=0.14",
  "pytest-cov>=7.0",
  'sphinx>=8,<9; python_version < "3.12"',
  'Sphinx>=9.1; python_version >= "3.12"',
  "sphinx-book-theme>=1.1.4",
  "myst-parser>=5.0",
  "numpydoc>=1.10"
]

[tool.uv-build]
package-dir = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
  "--cov=transix",
  "--cov-report=term-missing",
  "--cov-fail-under=90",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]